// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Membership should render 1`] = `
<div>
  <div
    class="card card-root segment-membership-root"
  >
    <div
      class="card-header"
    >
      <h5
        class="card-title"
      >
        Segment Membership
      </h5>
      <div
        class="subtitle-segment"
      >
        Segment membership processes daily and does not include today's activities.
      </div>
    </div>
    <div
      class="card-body segment-growth-root no-padding"
    >
      <div
        class="segment-growth-chart-container"
      >
        <div
          class="composed-chart-with-empty-state"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 360px;"
          >
            <div
              style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
            />
          </div>
        </div>
      </div>
      <div
        class="selected-point-info"
      >
        <h4>
          Known Members
        </h4>
      </div>
      <div
        class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
      >
        <div
          class="toolbar-root"
        >
          <nav
            class="navbar navbar-root management-bar management-bar-light navbar-expand"
          >
            <div
              class="container-fluid"
            >
              <ul
                class="nav-root front-nav navbar-nav"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <button
                    class="button-root btn btn-unstyled nav-link nav-link-monospaced btn-outline-borderless"
                    type="button"
                  >
                    <svg
                      class="icon-root lexicon-icon lexicon-icon-order-arrow-ascending"
                      viewBox=""
                    >
                      <use
                        xlink:href="/o/osb-faro-web/dist/sprite.svg#order-arrow-ascending"
                      />
                    </svg>
                  </button>
                </li>
              </ul>
              <div
                class="navbar-form navbar-form-autofit"
              >
                <div
                  class="input-group search"
                >
                  <div
                    class="input-group-item"
                  >
                    <input
                      class="input-root form-control input-group-inset input-group-inset-after"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        class="button-root btn btn-unstyled"
                        type="button"
                      >
                        <svg
                          class="icon-root lexicon-icon lexicon-icon-search"
                          viewBox=""
                        >
                          <use
                            xlink:href="/o/osb-faro-web/dist/sprite.svg#search"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
        </div>
        <div
          class="table-responsive table-root flex-grow-1"
        >
          <table
            class="table table-autofit table-hover table-heading-nowrap table-nowrap"
          >
            <thead>
              <tr>
                <th
                  class="table-head-title"
                >
                  <button
                    class="button-root btn btn-unstyled inline-item text-truncate-inline"
                    type="button"
                  >
                    <span
                      class="text-truncate"
                    >
                      Name
                    </span>
                    <span
                      class="inline-item inline-item-after"
                    >
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-order-arrow-up"
                        viewBox=""
                      >
                        <use
                          xlink:href="/o/osb-faro-web/dist/sprite.svg#order-arrow-up"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
                <th
                  class="table-head-title"
                >
                  Email
                </th>
                <th
                  class="table-head-title"
                >
                  Account Names
                </th>
                <th
                  class="table-head-title"
                >
                  <button
                    class="button-root btn btn-unstyled inline-item text-truncate-inline"
                    type="button"
                  >
                    <span
                      class="text-truncate"
                    >
                      First Seen
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
              >
                <td
                  class="name-cell-root"
                >
                  <div
                    class="content-container"
                  >
                    <div
                      class="text-truncate"
                    >
                      <div
                        class="table-title text-truncate"
                      >
                        Foo Bar
                      </div>
                    </div>
                  </div>
                </td>
                <td>
                  -
                </td>
                <td
                  class="name-cell-root"
                >
                  <div
                    class="text-truncate"
                  >
                    -
                  </div>
                </td>
                <td>
                  Jul 8, 2018
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="navbar navbar-root pagination-bar-root"
        >
          <div
            class="container-fluid"
          >
            <div
              aria-haspopup="true"
              class="dropdown dropdown-root pagination-items-per-page"
            >
              <button
                class="button-root btn btn-secondary dropdown-toggle show-caret btn-sm"
                type="button"
              >
                <span
                  class="text-truncate"
                >
                  20 Items
                </span>
                
                <span
                  class="caret-root"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                    viewBox=""
                  >
                    <use
                      xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pagination-results"
            >
              Showing 1 to 1 of 1 entry.
            </div>
            <ul
              class="pagination pagination-root"
            >
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-angle-left"
                    viewBox=""
                  >
                    <use
                      xlink:href="/o/osb-faro-web/dist/sprite.svg#angle-left"
                    />
                  </svg>
                </button>
              </li>
              <li
                class="page-item active"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  type="button"
                >
                  1
                </button>
              </li>
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link"
                  disabled=""
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-angle-right"
                    viewBox=""
                  >
                    <use
                      xlink:href="/o/osb-faro-web/dist/sprite.svg#angle-right"
                    />
                  </svg>
                </button>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`MembershipChart should render 1`] = `
<div>
  <div
    class="card-body segment-growth-root no-padding"
  >
    <div
      class="segment-growth-chart-container"
    >
      <div
        class="composed-chart-with-empty-state"
      >
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 360px;"
        >
          <div
            style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="selected-point-info"
    >
      <h4>
        Known Members
      </h4>
    </div>
    <div
      class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
    >
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            >
              <li
                class="nav-item"
                role="presentation"
              >
                <button
                  class="button-root btn btn-unstyled nav-link nav-link-monospaced btn-outline-borderless"
                  type="button"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-order-arrow-ascending"
                    viewBox=""
                  >
                    <use
                      xlink:href="/o/osb-faro-web/dist/sprite.svg#order-arrow-ascending"
                    />
                  </svg>
                </button>
              </li>
            </ul>
            <div
              class="navbar-form navbar-form-autofit"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-search"
                        viewBox=""
                      >
                        <use
                          xlink:href="/o/osb-faro-web/dist/sprite.svg#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="table-responsive table-root flex-grow-1"
      >
        <table
          class="table table-autofit table-hover table-heading-nowrap table-nowrap"
        >
          <thead>
            <tr>
              <th
                class="table-head-title"
              >
                <button
                  class="button-root btn btn-unstyled inline-item text-truncate-inline"
                  type="button"
                >
                  <span
                    class="text-truncate"
                  >
                    Name
                  </span>
                  <span
                    class="inline-item inline-item-after"
                  >
                    <svg
                      class="icon-root lexicon-icon lexicon-icon-order-arrow-up"
                      viewBox=""
                    >
                      <use
                        xlink:href="/o/osb-faro-web/dist/sprite.svg#order-arrow-up"
                      />
                    </svg>
                  </span>
                </button>
              </th>
              <th
                class="table-head-title"
              >
                Email
              </th>
              <th
                class="table-head-title"
              >
                Account Names
              </th>
              <th
                class="table-head-title"
              >
                <button
                  class="button-root btn btn-unstyled inline-item text-truncate-inline"
                  type="button"
                >
                  <span
                    class="text-truncate"
                  >
                    First Seen
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="name-cell-root"
              >
                <div
                  class="content-container"
                >
                  <div
                    class="text-truncate"
                  >
                    <div
                      class="table-title text-truncate"
                    >
                      Foo Bar
                    </div>
                  </div>
                </div>
              </td>
              <td>
                -
              </td>
              <td
                class="name-cell-root"
              >
                <div
                  class="text-truncate"
                >
                  -
                </div>
              </td>
              <td>
                Jul 8, 2018
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav
        class="navbar navbar-root pagination-bar-root"
      >
        <div
          class="container-fluid"
        >
          <div
            aria-haspopup="true"
            class="dropdown dropdown-root pagination-items-per-page"
          >
            <button
              class="button-root btn btn-secondary dropdown-toggle show-caret btn-sm"
              type="button"
            >
              <span
                class="text-truncate"
              >
                20 Items
              </span>
              
              <span
                class="caret-root"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="pagination-results"
          >
            Showing 1 to 1 of 1 entry.
          </div>
          <ul
            class="pagination pagination-root"
          >
            <li
              class="page-item disabled"
            >
              <button
                class="button-root btn btn-unstyled page-link"
                disabled=""
                type="button"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-angle-left"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#angle-left"
                  />
                </svg>
              </button>
            </li>
            <li
              class="page-item active"
            >
              <button
                class="button-root btn btn-unstyled page-link"
                type="button"
              >
                1
              </button>
            </li>
            <li
              class="page-item disabled"
            >
              <button
                class="button-root btn btn-unstyled page-link"
                disabled=""
                type="button"
              >
                <svg
                  class="icon-root lexicon-icon lexicon-icon-angle-right"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#angle-right"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
